--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,33 +1,5 @@
 % !TeX root = document.tex
 % !TeX encoding = UTF-8 Unicode
 
-\chapter{Recursos Necessários}%
-\label{chp:needed-resources}
-
-Para o novo circuito de acionamento, que será inserido paralelo ao existente,
-serão necessários circuitos microcontrolados capazes de medir os valores de
-tensão existentes no circuito atual e de se comunicar com um computador. Por
-isso optou-se por utilizar placas Arduíno, pois são acessíveis e atendem aos
-requisitos.
-
-Também optou-se por utilizar um computador portátil de baixo custo como prova de
-conceito, pois a plataforma de controle foi pensada de forma a executar bem o
-controlador em um computador com recursos limitados. Para isto escolheu-se
-utilizar um \textit{Raspberry Pi}. A comunicação entre o \textit{Raspberry} e os
-Arduínos se dará por cabo USB (porta serial emulada), enquanto a comunicação do
-\textit{Raspberry} com o exterior se dará por cabo de rede.
-
-Com isso, necessitasse dos seguintes componentes:
-
-\begin{itemize}
-      \item 1 Raspberry Pi
-      \item 2 Arduínos
-      \item \textit{jumpers}
-      \item Cabos USB
-      \item Cabo de rede
-\end{itemize}
-
-Todo software utilizado será \textit{open-source}, como: linguagem Python,
-plataforma de controle (Lachesis e Moirai), sistema operacional Raspbian, banco
-de dados Mongo DB, ambiente de virtualização Docker, suítes SciPy e bibilioteca
-Control.
+\chapter{Desenvolvimento}%
+\label{chp:development}
