--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,93 +1,6 @@
 % !TeX root = document.tex
 % !TeX encoding = UTF-8 Unicode
 
-\chapter{Cronograma}%
-\label{chp:chronogram}
+\chapter{Conclusão}%
+\label{chp:conclusion}
 
-A seguir está apresentado o cronograma de atividades a serem executadas.
-
-\renewcommand{\labelenumii}{\theenumii}
-\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
-
-\begin{enumerate}
-      \item Estudos teóricos
-            \begin{enumerate}
-                  \item MPC --- será estudado o desenvolvimento e implementação
-                        do controlador preditivo discreto no tempo com
-                        restrições;
-                  \item SPD --- será estudado o trabalho
-                        do~\textcite{masterthesis:nelson}, visando replicar
-                        seus resultados na plataforma;
-                  \item Modelagem térmica --- serão estudados os trabalhos de
-                        conclusão de curso do~\textcite{misc:nelson}
-                        e~\textcite{misc:valle-silva}, que fizeram a
-                        construção física e modelagem do forno;
-            \end{enumerate}
-      \item Modificação do hardware e implantação da plataforma
-            \begin{enumerate}
-                  \item Implementação de um circuito de acionamento do forno
-                        paralelo ao existente atualmente;
-                  \item Implantação de um Raspberry Pi para comunicação com os
-                        Arduínos;
-                  \item Instalação da plataforma no Raspberry Pi e modificação
-                        da plataforma e do Arduíno para possibilitar a
-                        comunicação e controle da planta;
-            \end{enumerate}
-      \item Calibrações, testes e certificações
-            \begin{enumerate}
-                  \item Certificação do funcionamento da parte elétrica do
-                        forno;
-                  \item Calibração dos sensores e atuadores;
-                  \item Validação dos modelos SPD\@;
-            \end{enumerate}
-      \item Desenvolvimento do controlador
-            \begin{enumerate}
-                  \item Desenvolvimento de um controlador MPC discreto no tempo
-                        com restrições baseado no modelo SPD com atraso nos
-                        estados;
-                  \item Desenvolvimento de um controlador PI para comparação;
-                  \item Implementação do controlador na plataforma utilizando a
-                        linguagem Python;
-                  \item Comparação dos controladores MPC e PI utilizando os
-                        índices IAE e IVx;
-                  \item Aplicação de melhorias na plataforma de controle com
-                        base na experiência adquirida durante seu uso;
-            \end{enumerate}
-      \item Relatório
-            \begin{enumerate}
-                  \item Escrita do relatório final de TCC1.
-                  \item Defesa do TCC1
-                  \item Escrita do relatório final de TCC2.
-                  \item Defesa do TCC2
-            \end{enumerate}
-\end{enumerate}
-
-\begin{table}[!ht]
-      \caption{Cronograma de atividades}
-      \begin{center}
-            \footnotesize{
-            \begin{tabular}{c|c|c|c|c|c|c|c|c|c}
-                \hline
-                Atividade ($\downarrow$) Mês.($\rightarrow$) & Mar     & Abr     & Mai     & Jun     & Jul     & Ago     & Set     & Out     & Nov     \\ \hline
-                $1.1$                                        & $\surd$ & $\surd$ & $\surd$ & $\surd$ & $\surd$ & $\surd$ & $\surd$ & $\surd$ &         \\ \hline
-                $1.2$                                        & $\surd$ & $\surd$ &         &         &         &         &         &         &         \\ \hline
-                $1.3$                                        & $\surd$ & $\surd$ &         &         &         &         &         &         &         \\ \hline
-                $2.1$                                        & $\surd$ & $\surd$ &         &         &         &         &         &         &         \\ \hline
-                $2.2$                                        & $\surd$ & $\surd$ &         &         &         &         &         &         &         \\ \hline
-                $2.3$                                        & $\surd$ & $\surd$ &         &         &         &         &         &         &         \\ \hline
-                $3.1$                                        &         & $\surd$ & $\surd$ &         &         &         &         &         &         \\ \hline
-                $3.2$                                        &         & $\surd$ & $\surd$ &         &         &         &         &         &         \\ \hline
-                $3.3$                                        &         & $\surd$ & $\surd$ &         &         &         &         &         &         \\ \hline
-                $4.1$                                        &         &         &         & $\surd$ & $\surd$ & $\surd$ &         &         &         \\ \hline
-                $4.2$                                        &         &         &         & $\surd$ & $\surd$ & $\surd$ &         &         &         \\ \hline
-                $4.3$                                        &         &         &         & $\surd$ & $\surd$ & $\surd$ &         &         &         \\ \hline
-                $4.4$                                        &         &         &         &         &         & $\surd$ &         &         &         \\ \hline
-                $4.5$                                        &         &         &         & $\surd$ & $\surd$ & $\surd$ &         &         &         \\ \hline
-                $5.1$                                        & $\surd$ & $\surd$ & $\surd$ & $\surd$ &         &         &         &         &         \\ \hline
-                $5.2$                                        &         &         &         & $\surd$ &         &         &         &         &         \\ \hline
-                $5.3$                                        &         &         &         & $\surd$ & $\surd$ & $\surd$ & $\surd$ & $\surd$ &         \\ \hline
-                $5.4$                                        &         &         &         &         &         &         &         &         & $\surd$ \\ \hline
-            \end{tabular}
-        }
-      \end{center}
-\end{table}
